fix overflow bug, add custom light/dark mode switch that saves state in localstorage and give social buttons html key

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,5 @@
 
 * {
     font-family: Comfortaa, serif;
-    overflow-x: hidden;
     @apply selection:bg-uranianBlue;
 }
